Stefano's investigations did the trick: added MenusBeginning()/MenusEnded() in the shortcut evaluation. This fixes bug #531.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18338 a95241bf-73f2-0310-859d-f6bbb57e9c96